# FusionSnake

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  checkMoves.js  dist.js  docker-compose.yaml  index.js  update.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: benchmarks.yml  ci.yml  docker.yml  fusionsnake.yml  trainer.yml
bench/: data.js
benches/: evaluation_bench.rs
benches/common/: mod.rs
fusionsnake/: Cargo.toml
fusionsnake/benches/: search_bench.rs  simulation_bench.rs
fusionsnake/src/: Dockerfile  db.rs  evaluation.rs  game_objects.rs  heuristic_params.rs  lib.rs  logic.rs  main.rs  search.rs  simulation.rs  training.rs
src/: auth.rs  db.rs  evaluation.rs  game_objects.rs  heuristic_params.rs  logic.rs  main.rs  responses.rs  search.rs  simulation.rs  stats.rs  training.rs
trainer/: Dockerfile  data_loader.py  entrypoint.sh  log_config.py  model.py  optimizer.py  param_schema.py  report.py  requirements.txt  server.py  train.py
