[package]
authors = ["Sayfullah Eid"]
name = "fusion-snake"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/FusionStreak/FusionSnake.git"
readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "^0.5.1", features = ["json"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
log = "^0.4.27"
env_logger = "^0.11.8"
rand = "^0.9.1"
