[package]
authors = ["Sayfullah Eid"]
name = "fusion-snake"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/FusionStreak/FusionSnake.git"
readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
actix-web = "^4.9"
actix-cors = "^0.7"
actix-rt = "^2.10"
futures-util = "^0.3"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
log = "^0.4.27"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["json", "env-filter"] }
rand = "^0.9.1"
chrono = { version = "^0.4", features = ["serde"] }

[lints.clippy]
pedantic = "warn"
